force-app/main/default/objects/Program__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <description>This is hard mapped value that is used in code.  Please do not change it.</description>
    <inlineHelpText>This is hard mapped value that is used in code.  Please do not change it.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial_Real_Time_Energy_Management</fullName>
            </value>
            <value>
                <fullName>NY_Sun_Commercial</fullName>
            </value>
            <value>
                <fullName>NY_Sun_Residential</fullName>
            </value>
            <value>
                <fullName>NY_Sun_Solar_Thermal</fullName>
            </value>
            <value>
                <fullName>RHNY_Pellet_Stove</fullName>
            </value>
            <value>
                <fullName>Clean_Transportation</fullName>
            </value>
            <value>
                <fullName>Commercial_Tenant</fullName>
            </value>
            <value>
                <fullName>Zero_Emission_Vehicles</fullName>
            </value>
            <value>
                <fullName>Onsite_Power_Combined_Heat_and_Power</fullName>
            </value>
            <value>
                <fullName>Clean_Energy_Community</fullName>
            </value>
            <value>
                <fullName>Commercial - Tenant</fullName>
            </value>
            <value>
                <fullName>April_Program</fullName>
            </value>
            <value>
                <fullName>Environmental_Monitoring_and_Research</fullName>
            </value>
            <value>
                <fullName>Advanced_Buildings</fullName>
            </value>
            <value>
                <fullName>Innovation_Capacity_and_Business_Development</fullName>
            </value>
            <value>
                <fullName>Smart_Grid_Systems_and_Distributed_Energy</fullName>
            </value>
            <value>
                <fullName>Technology_and_Business_Innovation</fullName>
            </value>
            <value>
                <fullName>Renewable_Resource_Optimization</fullName>
            </value>
            <value>
                <fullName>NY_Green_Bank</fullName>
            </value>
            <value>
                <fullName>GSHP_Small_System</fullName>
            </value>
            <value>
                <fullName>GSHP_Large_System</fullName>
            </value>
            <value>
                <fullName>Clean_Energy_Standard</fullName>
            </value>
            <value>
                <fullName>Large_Scale_Renewables</fullName>
            </value>
            <value>
                <fullName>Remote Energy Management</fullName>
                <label>Remote_Energy_Management</label>
            </value>
            <value>
                <fullName>New_Construction</fullName>
            </value>
            <value>
                <fullName>Solar_for_All</fullName>
            </value>
            <value>
                <fullName>Air_Source_Heat_Pump</fullName>
            </value>
            <value>
                <fullName>Public_Electric_Vehicle_Supply_Equipment</fullName>
            </value>
            <value>
                <fullName>Offshore_Wind</fullName>
            </value>
            <value>
                <fullName>Retail_Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>