force-app/main/default/objects/Program__c/fields/Contractor_App_Certification_Statement__c.field-meta.xml
<CustomField>
    <fullName>Contractor_App_Certification_Statement__c</fullName>
    <description>Certification Statement for the Program&apos;s Contractor Application.</description>
    <inlineHelpText>Certification Statement for the Program&apos;s Contractor Application.</inlineHelpText>
    <label>Contractor App Certification Statement</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>