force-app/main/default/objects/Program__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>This field captures if the program is serving businesses or individuals or both</description>
    <inlineHelpText>Please select if your program serves business or individuals or both</inlineHelpText>
    <label>Customer Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Type</valueSetName>
    </valueSet>
</CustomField>