force-app/main/default/objects/Program__c/fields/Expose_Proposal_Selection_Page__c.field-meta.xml
<CustomField>
    <fullName>Expose_Proposal_Selection_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expose Proposal Selection Page</label>
    <type>Checkbox</type>
</CustomField>