force-app/main/default/objects/Program__c/fields/Is_QA_applicable__c.field-meta.xml
<CustomField>
    <fullName>Is_QA_applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SF-28403 -</description>
    <label>Is QA applicable?</label>
    <type>Checkbox</type>
</CustomField>