force-app/main/default/objects/Program__c/fields/Partner_User_Default_Public_Groups__c.field-meta.xml
<CustomField>
    <fullName>Partner_User_Default_Public_Groups__c</fullName>
    <description>Field added for SF-34102 - Configure Public Groups for Program Participants</description>
    <label>Partner User Default Public Groups</label>
    <type>TextArea</type>
</CustomField>