force-app/main/default/objects/Program__c/fields/Program_Family__c.field-meta.xml
<CustomField>
    <fullName>Program_Family__c</fullName>
    <description>Please choose from the available Program Families to see which active programs are available</description>
    <inlineHelpText>Please choose from the available Program Families to see which active programs are available</inlineHelpText>
    <label>Program Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NY-Sun</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Performance &amp; Market Standards</fullName>
            </value>
            <value>
                <fullName>Communities &amp; Local Government</fullName>
            </value>
            <value>
                <fullName>Multi Family</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Onsite Power</fullName>
            </value>
            <value>
                <fullName>Renewable Heating and Cooling</fullName>
            </value>
            <value>
                <fullName>Environmental Research</fullName>
            </value>
            <value>
                <fullName>Advanced Buildings</fullName>
            </value>
            <value>
                <fullName>Innovation Capacity and Business Development</fullName>
            </value>
            <value>
                <fullName>Smart Grid Systems and Distributed Energy</fullName>
            </value>
            <value>
                <fullName>Technology and Business Innovation</fullName>
            </value>
            <value>
                <fullName>Renewable Resource Optimization</fullName>
            </value>
            <value>
                <fullName>NY Green Bank</fullName>
            </value>
            <value>
                <fullName>Clean Energy Standard</fullName>
            </value>
            <value>
                <fullName>Commercial Type</fullName>
            </value>
            <value>
                <fullName>NY-Sun Type</fullName>
            </value>
            <value>
                <fullName>Workforce Development</fullName>
            </value>
            <value>
                <fullName>New Construction</fullName>
            </value>
            <value>
                <fullName>Solar for All</fullName>
            </value>
            <value>
                <fullName>Clean Heating and Cooling</fullName>
            </value>
            <value>
                <fullName>Energy Storage</fullName>
            </value>
            <value>
                <fullName>Energy &amp; Environmental Analysis</fullName>
            </value>
            <value>
                <fullName>WV-State Lics&apos;d Disposal Area</fullName>
            </value>
            <value>
                <fullName>Low/Moderate Income</fullName>
            </value>
            <value>
                <fullName>Large-Scale Renewables</fullName>
            </value>
            <value>
                <fullName>Standards &amp; Quality Assurance</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Industrial &amp; Agriculture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>