force-app/main/default/objects/Program__c/fields/Program_Manual_Link__c.field-meta.xml
<CustomField>
    <fullName>Program_Manual_Link__c</fullName>
    <label>Program Manual Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>