force-app/main/default/objects/Program__c/fields/Program_Staff_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Staff_Group_Name__c</fullName>
    <inlineHelpText>Enter the email address that Program Partnership Requests should be sent to.</inlineHelpText>
    <label>Program Staff Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>