force-app/main/default/objects/Program__c/fields/Program_Templates_Contractor_App__c.field-meta.xml
<CustomField>
    <fullName>Program_Templates_Contractor_App__c</fullName>
    <description>https://servicedesk.nyserda.ny.gov/browse/SF-29873</description>
    <label>Program Templates (Contractor App)</label>
    <summaryFilterItems>
        <field>Program_Template__c.Template_Type__c</field>
        <operation>equals</operation>
        <value>Contractor Application</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Program_Template__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Program_Template__c.Program__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>