force-app/main/default/objects/Program__c/fields/Program_Templates_Proposal_Application__c.field-meta.xml
<CustomField>
    <fullName>Program_Templates_Proposal_Application__c</fullName>
    <description>Count of Proposal Application type of program templates. To be used in solicitation validations.</description>
    <label>Program Templates (Proposal Application)</label>
    <summaryFilterItems>
        <field>Program_Template__c.Template_Type__c</field>
        <operation>equals</operation>
        <value>Proposal Application</value>
    </summaryFilterItems>
    <summaryForeignKey>Program_Template__c.Program__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>