force-app/main/default/objects/Program__c/fields/QA_Project_Visibility_by_Dwelling_Type__c.field-meta.xml
<CustomField>
    <fullName>QA_Project_Visibility_by_Dwelling_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>S-01201: Schedulers should only see projects that match their assigned Dwelling Type.</description>
    <label>QA Project Visibility by Dwelling Type?</label>
    <type>Checkbox</type>
</CustomField>