force-app/main/default/objects/Program__c/fields/Role_for_QA_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Role_for_QA_Inspection__c</fullName>
    <description>SF-28636: Each program will have its own type of role that gets inspected. This needs to be configured at the program level. There is only one role inspected for each program.</description>
    <inlineHelpText>Each program will have its own type of role that gets inspected. This needs to be configured at the program level. There is only one role inspected for each program.</inlineHelpText>
    <label>Role for QA Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>