force-app/main/default/objects/Program__c/fields/Roles_for_QA_Inspection_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Roles_for_QA_Inspection_Notifications__c</fullName>
    <description>SF-28636</description>
    <label>Roles for QA Inspection Notifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>