force-app/main/default/objects/Program__c/fields/Send_Contractor_Application_when_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Send_Contractor_Application_when_Awarded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Contractor Application when Awarded</label>
    <type>Checkbox</type>
</CustomField>