force-app/main/default/objects/Program__c/fields/Skip_Supplier_ID_check_on_provisioning__c.field-meta.xml
<CustomField>
    <fullName>Skip_Supplier_ID_check_on_provisioning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>S-01206: Field to indicate if the Supplier Id mandatory check should be skipped at the time of provisioning on vendor application provisioning UI. Default value: false.</description>
    <inlineHelpText>Should the supplier Id mandatory check be skipped at the time of provisioning on vendor/contractor provisioning UI? Default value: false.</inlineHelpText>
    <label>Skip Supplier ID check on provisioning</label>
    <type>Checkbox</type>
</CustomField>