force-app/main/default/objects/Program__c/fields/Statement__c.field-meta.xml
<CustomField>
    <fullName>Statement__c</fullName>
    <description>Statement of Program, which show application review page</description>
    <label>Statement</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>