force-app/main/default/objects/Program__c/fields/Sub_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Program_Type__c</fullName>
    <label>Sub Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>