force-app/main/default/objects/Program__c/fields/Supported_QA_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Supported_QA_Assignments__c</fullName>
    <description>SF-28403</description>
    <label>Supported QA Assignments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Supported_QA_Assignments</valueSetName>
    </valueSet>
</CustomField>