force-app/main/default/objects/Program__c/fields/Use_Program_Approval_for_Sign_Up_Request__c.field-meta.xml
<CustomField>
    <fullName>Use_Program_Approval_for_Sign_Up_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>S-00649: Field to indicate if Program must follow Approval Steps to have users signed up in case of matching or duplicate contact details.</description>
    <inlineHelpText>Program will utilize Approval flow to have users signed up in case of matching or duplicate contact details. If checked, new accounts and contacts will not be created and linked to Project Roles since accounts are created on approval of PPR.</inlineHelpText>
    <label>Use Program Approval for Sign-Up Request</label>
    <type>Checkbox</type>
</CustomField>